# Breakout-OpenGL

./: .gitignore  CMakeLists.txt  CMakelists.txt  OpenGLgame
apps/: CMakeLists.txt  main.cpp
apps/shaders/: particle.fs  particle.vs  post_processing.fs  post_processing.vs
include/: ball_object_collisions.h  game.h  game_object.h  resource_manager.h  shader.h  sprite_renderer.h  texture.h
libs/: CMakeLists.txt
libs/external_libs/: CMakeLists.txt
libs/external_libs/glad/: CMakeLists.txt
libs/external_libs/stb_image/: CMakeLists.txt
libs/internal_libs/: CMakeLists.txt
libs/internal_libs/ball/: CMakeLists.txt
libs/internal_libs/ball/include/: ball_object.h
libs/internal_libs/ball/src/: ball_object_collisions.cpp
libs/internal_libs/game/: CMakeLists.txt
libs/internal_libs/game/src/: game.cpp
libs/internal_libs/game_level/: CMakeLists.txt
libs/internal_libs/game_level/include/: game_level.h
libs/internal_libs/game_level/src/: game_level.cpp
libs/internal_libs/game_object/: CMakeLists.txt
libs/internal_libs/particle_generator/: CMakeLists.txt
libs/internal_libs/particle_generator/include/: particle_generator.h
libs/internal_libs/particle_generator/src/: particle_generator.cpp
libs/internal_libs/resource_manager/: CMakeLists.txt
libs/internal_libs/shader/: CMakeLists.txt
libs/internal_libs/sprite_renderer/: CMakeLists.txt
libs/internal_libs/texture/: CMakeLists.txt
src/: ball_object_collisions.cpp  game.cpp  game_object.cpp  particle_generator.cpp  program.cpp  resource_manager.cpp  shader.cpp  sprite.fs  sprite_renderer.cpp
(+3 files in other folders)
